--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Дамјан Георгиевски <gdamjan@gmail.com>"]
 
 [dependencies]
 actix-web = "0.6"
+uuid = { version = "0.6", features = ["v4"] }
+serde = "1.0"
+serde_derive = "1.0"
