--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,12 @@
 name = "rpssl"
 version = "0.1.0"
 authors = ["Дамјан Георгиевски <gdamjan@gmail.com>"]
+license = "MIT"
+readme = "README.md"
 
 [dependencies]
-actix-web = "0.6"
+actix = "0.6"
+actix-web = { git = "https://github.com/actix/actix-web.git" }
 uuid = { version = "0.6", features = ["v4"] }
 serde = "1.0"
 serde_derive = "1.0"
