--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ actix-web = { git = "https://github.com/actix/actix-web.git" }
 uuid = { version = "0.6", features = ["v4"] }
 serde = "1.0"
 serde_derive = "1.0"
+tokio-timer = "0.2.1"
+futures = "0.1"
