--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,12 @@ license = "MIT"
 readme = "README.md"
 
 [dependencies]
-actix = "0.6"
+actix = "*"
 actix-web = { git = "https://github.com/actix/actix-web.git" }
 uuid = { version = "0.6", features = ["v4"] }
 serde = "1.0"
 serde_derive = "1.0"
 futures = "0.1"
+
+[patch.crates-io]
+actix = { git = "https://github.com/actix/actix.git" }
