--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ uuid = { version = "0.6", features = ["v4"] }
 serde = "1.0"
 serde_derive = "1.0"
 futures = "0.1"
+env_logger = "*"
 
 [patch.crates-io]
 actix = { git = "https://github.com/actix/actix.git" }
